--- a/src/app/(MainCompoments)/Helpcenter/Helpcenter.css
+++ b/src/app/(MainCompoments)/Helpcenter/Helpcenter.css
@@ -106,6 +106,11 @@
     max-width: 400px;
   }
 }
+@media (max-width: 600px) {
+  .Helpcenter .widthsercive {
+    width: 70% !important;
+  }
+}
 @media (max-width: 380px) {
   .Helpcenter .search-button {
     padding: 14px;
