--- a/src/app/(MainCompoments)/Knowladgecenter/Knowladgecenter.css
+++ b/src/app/(MainCompoments)/Knowladgecenter/Knowladgecenter.css
@@ -9,7 +9,7 @@
   font-weight: 300 !important;
   color: var(--auth-color);
 }
-.Knowladgecenter .Helpcenterpquestion {
+.Knowladgecenter .Helpcenterpquestion2 {
   font-size: 20px !important;
   font-weight: 400 !important;
   color: var(--primary-color) !important;
