--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,10 +13,10 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  background: var(--background);
+  background: var(--background) !important;
 }
 body {
-  background: var(--background);
+  background: var(--background) !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   direction: rtl;
