--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,5 @@
 :root {
-  --background: #F9F9F9;
+  --background: #f9f9f9;
   --foreground: #171717;
   --primary-color: #336279; /* اللون الرئيسي */
   --secondary-color: #575050; /* اللون الفرعي */
@@ -13,10 +13,10 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  background: var(--background) !important;
+  background-color: var(--background) !important;
 }
 body {
-  background: var(--background) !important;
+  background-color: var(--background) !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   direction: rtl;
