--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,6 +34,15 @@ a {
   color: var(--primary-color) !important;
   font-weight: 500 !important;
 }
+.layoutfooter {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.contentfooter {
+  flex: 1;
+}
 .small-swal-logout {
   margin-top: 20px !important;
   width: 400px !important; /* تقليل العرض */
