--- a/src/app/(MainCompoments)/Orders/[id]/Orderdetilas.css
+++ b/src/app/(MainCompoments)/Orders/[id]/Orderdetilas.css
@@ -13,7 +13,7 @@
   padding: 0 !important;
 }
 button.btnback {
-  background-color: #548da9 !important;
+  background-color: var(--primary-btn) !important;
   border: none !important;
   font-size: 12px !important;
   font-weight: 500 !important;
@@ -62,10 +62,14 @@ button.btnback {
   color: var(--auth-color) !important;
 }
 .Ordersdetails .wayslink {
-  background-color: #578faa !important;
+  background-color: var(--primary-btn) !important ;
 }
 .Ordersdetails .wayslink .wayslinkp {
   font-size: 10px !important;
+  font-weight: 400 !important;
+}
+.Ordersdetails .wayslink .wayslinkppin {
+  font-size: 16px !important;
   font-weight: 400 !important;
 }
 .Ordersdetails .tajwalh {
