--- a/src/app/(MainCompoments)/Orders/[id]/Orderdetilas.css
+++ b/src/app/(MainCompoments)/Orders/[id]/Orderdetilas.css
@@ -62,11 +62,12 @@ button.btnback {
   color: var(--auth-color) !important;
 }
 .Ordersdetails .wayslink {
-  background-color: var(--primary-btn) !important ;
+  background-color: var(--primary-color) !important ;
+  filter: brightness(1.5) saturate(0.8);
 }
 .Ordersdetails .wayslink .wayslinkp {
-  font-size: 10px !important;
-  font-weight: 400 !important;
+  font-size: 13px !important;
+  font-weight: 200 !important;
 }
 .Ordersdetails .wayslink .wayslinkppin {
   font-size: 16px !important;
