--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,7 @@
   --background: #f9f9f9;
   --foreground: #171717;
   --primary-color: #336279; /* اللون الرئيسي */
-  --primary-btn: #548da9; /* اللون الثانوي */
+  --primary-btn: #4B87A4; /* اللون الثانوي */
   --secondary-color: #575050; /* اللون الفرعي */
   --auth-color: #626e7b; /* اللون الفرعي */
   --font-largeNavbar: 20px;
