--- a/src/app/(auth)/Login/login.css
+++ b/src/app/(auth)/Login/login.css
@@ -36,11 +36,11 @@
   border-bottom: 1px solid var(--primary-color);
 }
 .login button.follow {
-  background-color: var(--primary-color) !important;
-  padding: 10px 100px;
+  background-color: var(--primary-btn) !important;
+  padding: 13px 100px;
   color: #f1f3f6;
-  font-size: 13px;
-  font-weight: 700;
+  font-size: 13px !important;
+  font-weight: 700 !important;
   border-radius: 5px;
   border: none;
 }
