--- a/src/app/(auth)/Login/login.css
+++ b/src/app/(auth)/Login/login.css
@@ -50,7 +50,7 @@
 }
 .login button.back {
   background-color: var(--auth-color) !important;
-  padding: 10px 80px;
+  padding: 13px 120px;
   color: #f1f3f6;
   font-size: 13px;
   font-weight: 700;
@@ -63,15 +63,15 @@
   .login {
     padding: 0 15px;
   }
-  .login button.follow {
-    padding: 10px 100px;
-  }
 }
 
 @media screen and (max-width: 576px) {
   .login button.follow {
     font-size: 12px;
     padding: 10px 100px;
+  }
+  .login button.back {
+    padding: 10px 80px;
   }
   .login .p-login p {
     font-size: 11px;
