--- a/src/app/(MainCompoments)/Simcard/Simcard.css
+++ b/src/app/(MainCompoments)/Simcard/Simcard.css
@@ -22,6 +22,10 @@
   color: var(--primary-btn) !important;
 }
 /* checkboxx */
+.equal-width {
+  width: 100%;
+  max-width: 300px; /* يمكنك تعديلها حسب الحاجة */
+}
 .custom-checkbox input[type="checkbox"] {
   display: none;
 }
@@ -38,11 +42,6 @@
 
 .custom-checkbox input[type="checkbox"]:checked + .checkmark {
   background-color: #f9f9f9; /* اللون الذي تريده */
-}
-.payement {
-  padding: 0px !important;
-  margin: 0px !important;
-  gap: 0 !important;
 }
 
 .custom-checkbox .checkmark::after {
@@ -64,18 +63,11 @@
 .compatibility-check {
   border-radius: 8px; /* زوايا مستديرة */
 }
-
 .custom-checkbox p {
   font-size: 10px !important;
   font-weight: 300 !important;
   margin-right: 15px !important;
   margin-top: 5px;
-}
-
-.compatibility-check .title {
-  font-size: 12px;
-  font-weight: 400;
-  color: var(--auth-color);
 }
 
 @media (min-width: 526px) and (max-width: 995px) {
@@ -92,4 +84,3 @@
     white-space: nowrap; /* يمنع النص من النزول لسطر جديد */
   }
 }
-
