--- a/src/app/(MainCompoments)/Simcard/Simcard.css
+++ b/src/app/(MainCompoments)/Simcard/Simcard.css
@@ -66,8 +66,7 @@
 .compatibility-check p {
   font-size: 10px !important;
   font-weight: 300 !important;
-
-  margin-top: 5px;
+  margin-right: 10px;
 }
 
 @media (min-width: 526px) and (max-width: 995px) {
