--- a/src/app/_Compontents/Navbar/navbar.css
+++ b/src/app/_Compontents/Navbar/navbar.css
@@ -36,7 +36,11 @@ li.nav-item a.nav-link {
   box-shadow: 0 0 0 0 transparent !important;
   outline: none !important;
 }
-
+@media (min-width: 992px) and (max-width: 1090px) {
+  .btnresgister .resgister {
+    padding: 6px 19px !important;
+  }
+}
 @media (max-width: 992px) {
   .offcanvas {
     width: 250px !important;
