--- a/src/app/(auth)/Login/login.css
+++ b/src/app/(auth)/Login/login.css
@@ -5,7 +5,7 @@
 }
 .login .imagelogin {
   width: 408px !important;
-  height: auto !important;
+  height: 200px !important;
 }
 .login .phone-input-field {
   width: 100% !important;
