--- a/src/app/(MainCompoments)/Simcard/Simcard.css
+++ b/src/app/(MainCompoments)/Simcard/Simcard.css
@@ -72,8 +72,13 @@
 .Simcard .divqr {
   background-color: var(--background);
 }
-.Simcard .pqr{
+.Simcard .pqr {
   font-size: 12px !important;
+  font-weight: 300 !important;
+  color: var(--secondary-color);
+}
+.Simcard .checkmanul {
+  font-size: 10px !important;
   font-weight: 300 !important;
   color: var(--secondary-color);
 }
