--- a/src/app/(MainCompoments)/Simcard/Simcard.css
+++ b/src/app/(MainCompoments)/Simcard/Simcard.css
@@ -87,6 +87,17 @@
   font-size: 10px !important;
   font-weight: 600 !important;
 }
+.Simcard .checkwatchbtn {
+  background-color: var(--primary-btn);
+  font-size: 10px !important;
+  font-weight: 400 !important;
+}
+.Simcard .checkinfobtn {
+  background-color: #d9dee44d !important;
+  font-size: 10px !important;
+  font-weight: 400 !important;
+  color: var(--auth-color) !important;
+}
 
 @media (min-width: 526px) and (max-width: 995px) {
   .Simcarchoose {
