--- a/src/app/(MainCompoments)/Esims/esims.css
+++ b/src/app/(MainCompoments)/Esims/esims.css
@@ -18,6 +18,7 @@
   flex-wrap: nowrap; /* منع النزول لأسفل */
   gap: 8px; /* مسافة صغيرة بين العناصر */
   padding: 10px; /* مسافة خارجية للحواف */
+
 }
 
 .order-box {
@@ -32,6 +33,6 @@
   text-align: center;
   padding: 10px;
   border-radius: 8px;
-  background: white;
+  background: var(--background);
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
