--- a/src/app/(MainCompoments)/Esims/esims.css
+++ b/src/app/(MainCompoments)/Esims/esims.css
@@ -30,7 +30,7 @@
   justify-content: space-between;
   align-items: center;
   text-align: center;
-  padding: 10px;
+  padding: 10px 8px;
   border-radius: 5px;
   background: var(--background);
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
